--- a/Sean/index.html
+++ b/Sean/index.html
@@ -39,7 +39,7 @@
     </div>
 </div>
 <!-- Color Scale -->
-<script type='text/javascript' src='../assets/granim.min.js'></script>
+<script type='text/javascript' src='granim.min.js'></script>
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 <script type="text/javascript" src="app.js"></script>
 </body>
